<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="VisualLintBounds">

    <TextView
        android:id="@+id/txtViewConversor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/txtViewConversor"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgConversor"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="90dp"
        android:contentDescription="@string/imgConversor"
        android:src="@android:drawable/ic_popup_sync"
        app:layout_constraintEnd_toStartOf="@+id/txtViewConversor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#D04313"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/linearValores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewConversor">

        <EditText
            android:id="@+id/eTxtIntroValor"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:autofillHints="postalCode"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/eTxtIntroValor"
            android:inputType="numberDecimal"
            tools:ignore="LabelFor,TouchTargetSizeCheck,TextSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/txtViewIgual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/txtViewIgual"
            android:textSize="22sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/txtViewResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewResultado"
            android:textSize="18sp" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rGroupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearValores">

        <RadioButton
            android:id="@+id/rBtnLongitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rBtnLongitud" />

        <RadioButton
            android:id="@+id/rBtnPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rBtnPeso" />

        <RadioButton
            android:id="@+id/rBtnTemperatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rBtnTemperatura" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearBtnConver"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rGroupButton">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="#D04313"
            android:text="@string/btnCalcular"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="100dp"
            android:layout_weight="1"
            android:text="@string/btnBorrar"
            android:backgroundTint="#D04313"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkGuardar"
        app:layout_constraintBottom_toTopOf="@+id/linearBtnHistorico"
        app:layout_constraintTop_toBottomOf="@+id/linearBtnConver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/linearBtnHistorico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearBtnConver">

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/btnGuardar"
            android:backgroundTint="#D04313"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnHistorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"
            android:text="@string/btnHistorial"
            android:backgroundTint="#D04313"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <ListView
        android:id="@+id/listado"
        android:layout_width="409dp"
        android:layout_height="178dp"
        app:layout_constraintTop_toBottomOf="@id/linearBtnHistorico"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/listado" />


</androidx.constraintlayout.widget.ConstraintLayout>